REG-8717 Fikset opp i SkjermingsRegister, fikset error